# frood

./: .env.example  .env.paperclip  .env.paperclip.example  .env.paperclip.vps  .gitignore  .mcp.available.json  .mcp.json  .mcp.json.example  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  Run as Administrator  agent42-disable-proxy.bat  agent42-env.bat  agent42-proxy.ps1  agent42-service.xml  agent42.py  arianna_cycle_state.json  arianna_email_cycle_state.json  arianna_state.json  cc-cc.bat  cc-claude.bat  cc-zen.bat  cc.bat  check_api_response.py  check_dashboard.py  check_dashboard_detailed.py  claude.bat  commands.py  docker-compose.n8n.yml  docker-compose.paperclip.yml  email_inspect.json  frood-cc-launcher.ps1  frood-cc-launcher.py  frood.py  install-agent42-service.bat  install-agent42-service.ps1  mcp_registry.py  (+9 more)
.claude/: learned-patterns.json  settings.json
.claude/agents/: dependency-health.md  deploy-verifier.md  migration-impact.md  performance-auditor.md  security-reviewer.md  test-coverage-auditor.md
.claude/commands/: mcp-activate.md  mcp-deactivate.md  mcp-status.md
.claude/hooks/: cc-memory-sync-worker.py  cc-memory-sync.py  cleanup-orphans.py  context-loader.py  conversation-accumulator.py  effectiveness-learn.py  format-on-write.py  jcodemunch-reindex.py  knowledge-learn.py  (+12 more)
.frood/: cc-sync-status.json  effectiveness.db  settings.json  url_audit.jsonl
.opencode/: opencode.json
.planning/: GSD-WORKSTREAM-PROPOSAL.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  active-workstream  config.json
agents/: agent.py  agent_routing_store.py  iteration_engine.py  learner.py  model_catalog.py  model_router.py  profile_loader.py
channels/: base.py  discord_channel.py  email_channel.py  manager.py  slack_channel.py  telegram_channel.py
core/: agent_manager.py  agent_runtime.py  app_manager.py  approval_gate.py  capacity.py  cli_setup.py  command_filter.py  config.py  device_auth.py  email_monitor.py  encryption.py  error_codes.py  form_submitter.py  git_auth.py  github_accounts.py  github_oauth.py  heartbeat.py  intent_classifier.py  key_store.py  memory_bridge.py  model_classifier.py  notification_service.py  plan_spec.py  portability.py  project_manager.py  rate_limiter.py  repo_manager.py  reward_system.py  rewards_config.py  sandbox.py  security_scanner.py  sidecar_logging.py  sidecar_models.py  sidecar_orchestrator.py  task_context.py  task_queue.py  tiered_routing_bridge.py  url_policy.py  user_frood_dir.py  work_order.py  (+2 more)
dashboard/: auth.py  server.py  sidecar.py  websocket_manager.py
deploy/: install-server.sh
docs/: synthetic_dynamic_models.md
memory/: consolidation.py  consolidation_worker.py  effectiveness.py  embeddings.py  project_memory.py  qdrant_store.py  redis_session.py  search_service.py  session.py  store.py
providers/: abacus_api.py  nvidia_api.py  registry.py  zen_api.py  zen_proxy.py
scripts/: auto-resume.sh  check_openrouter_key.py  generate-icons.py  setup_helpers.py  start-qdrant.sh  test_synthetic_api.py
skills/: loader.py
tests/: test_abacus_provider.py  test_adaptive_rate_limiter.py  test_advanced_tools.py  test_agent_routing.py  test_app_manager.py  test_app_test_tool.py  test_auth_flow.py  test_cc_chat_ui.py  test_cc_layout.py  test_cc_memory_sync.py  test_cc_pty.py  test_cc_tool_use.py  test_cli_setup.py  test_cli_setup_core.py  test_consolidation_worker.py  test_context_loader.py  test_device_auth.py  test_direct_response_memory.py  test_dynamic_routing.py  test_dynamic_tool.py  test_effectiveness.py  test_effectiveness_offloading.py  test_encryption.py  test_error_handling.py  test_git_auth.py  test_github_accounts.py  test_ide_html.py  test_ide_workspace.py  test_knowledge_learn.py  test_learning_extraction.py  test_llm_proxy.py  test_mcp_server.py  test_memory.py  test_memory_backends.py  test_memory_bridge.py  test_memory_hooks.py  test_memory_repair_adapter.py  test_memory_repair_checks.py  test_memory_repair_executor.py  test_memory_repair_hook.py  (+45 more)
tools/: app_test_tool.py  app_tool.py  base.py  behaviour_tool.py  browser_tool.py  code_intel.py  content_analyzer.py  context.py  context_assembler.py  cron.py  data_tool.py  dependency_audit.py  diff_tool.py  docker_tool.py  domain_cooldown.py  dynamic_tool.py  email_send_tool.py  file_watcher.py  filesystem.py  git_tool.py  grep_tool.py  http_client.py  image_gen.py  knowledge_tool.py  linter_tool.py  mcp_client.py  memory_tool.py  n8n_create_workflow.py  n8n_workflow.py  node_sync.py  notify_tool.py  outline_tool.py  persona_tool.py  plugin_loader.py  pr_generator.py  project_interview.py  python_exec.py  registry.py  repo_map.py  scoring_tool.py  (+16 more)
(+778 files in other folders)
